<resources>
    <string name="app_name">ProjectCatalogueMovie2</string>
    <string name="nav_header_title">Andrew Prasetyo Herka</string>
    <string name="nav_header_subtitle">andrewprasetio@gmail.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="title_activity_home_tab_fragment">HomeTabFragment</string>
    <string name="section_format">Hello World from Section: %1$d</string>

    <!-- TODO: Hapus untuk ubah placeholder text ini-->

    <!-- Untuk Localization-->
    <string name="find_movie">Input Movie Name</string>
    <string name="find">SEARCH</string>
    <string name="find_title">SEARCH MOVIE</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="date_release">Date Release</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="upcoming">COMING SOON</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="findmovie">Find Movie</string>

    <!-- TODO: Hapus atau ubah teks placeholder ini -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="movieTitle">MovieTitle</string>
    <string name="movieOverview">Overview</string>
    <string name="releaseDate">Release Date</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="image_movie">Image Movie</string>
    <string name="vote">Vote</string>
    <string name="vote_is_not_available">Vote is not available</string>
    <string name="rating">Rating</string>
    <string name="rating_is_not_available">Rating is not available</string>
    <string name="date_of_release">Date of Release</string>
    <string name="to_be_confirmed">To be Confirmed</string>
</resources>
